app/registry/web/deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-web
  namespace: #@ data.values.registry.namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-web
  template:
    metadata:
      labels:
        app: registry-web
    spec:
      containers:
      - name: registry-web
        image: konradkleine/docker-registry-frontend:v2
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
      volumes:
      - name: tz-config
        hostPath:
          path: #@ "/usr/share/zoneinfo/" + data.values.timezone
---
kind: Service
apiVersion: v1
metadata:
  name: registry-web
  namespace: #@ data.values.registry.namespace
spec:
  selector:
    app: registry-web
  ports:
  - name: web
    port: 80
    targetPort: 80
